--- a/WebApplication1/Views/AccountDatas/Create.cshtml
+++ b/WebApplication1/Views/AccountDatas/Create.cshtml
@@ -1,37 +1,69 @@
 ﻿@model WebApplication1.Models.AccountData
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "新增帳號";
 }
 
 <!DOCTYPE html>
 
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
+    <style>
+        .card {
+            padding: 10px;
+        }
+
+        .pagetitle {
+            font-size: 15px;
+        }
+
+        .txt a {
+            color: white;
+        }
+
+        .card {
+            padding: 10px;
+        }
+
+        #card-body {
+            padding: 10px;
+        }
+    </style>
 </head>
 <main class="main" id="main">
+
 
     <div class="pagetitle">
         <h1>新增帳號 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者新增一筆帳號。</span></h1>
     </div>
-    <body>
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+   
+    <div class="card" id="card">
+        <div id="card-body">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <hr />
+                <div class="form-group">
+                    <button class="btn btn-success" onclick="history.go(-1)"><i class="ri-delete-back-2-fill"></i> 返回</button>
+                    <input type="submit" value="送出" class="btn btn-success" />
+
+                    <hr />
+
+                </div>
+
+
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    表單申請單號(系統自動帶入):
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control", Value = ViewBag.ID, @readonly = "readonly" } })
                         @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Account, htmlAttributes: new { @class = "control-label col-md-2" })
+                    帳號:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Account, "", new { @class = "text-danger" })
@@ -39,7 +71,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
+                    使用者名稱:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
@@ -47,15 +79,16 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                    密碼:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
+
                 <div class="form-group">
-                    @Html.LabelFor(model => model.E_mail, htmlAttributes: new { @class = "control-label col-md-2" })
+                    電子信箱:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.E_mail, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.E_mail, "", new { @class = "text-danger" })
@@ -63,7 +96,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+                    手機號碼:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
@@ -71,7 +104,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Role_ID, "Role_ID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    用戶權限選擇:
                     <div class="col-md-10">
                         @Html.DropDownList("Role_ID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Role_ID, "", new { @class = "text-danger" })
@@ -79,46 +112,43 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Static, htmlAttributes: new { @class = "control-label col-md-2" })
+                    帳號狀態:
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Static, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Static, new { htmlAttributes = new { @class = "form-control", Value = "Y" } })
                         @Html.ValidationMessageFor(model => model.Static, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Creat, htmlAttributes: new { @class = "control-label col-md-2" })
+                    創建日期:
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Creat, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Creat, new { htmlAttributes = new { @class = "form-control", Value = DateTime.Now.ToString() } })
                         @Html.ValidationMessageFor(model => model.Creat, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Logtime, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Logtime, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Logtime, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                @*<div class="form-group">
+            @Html.LabelFor(model => model.Logtime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Logtime, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Logtime, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-2" })
+                    備註:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
-                </div>
-            </div>
-        }
 
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    </body>
+            </div>
+            }
+
+            </div>
+                
+            </div>
+          
+</main>
