--- a/WebApplication1/Views/AccountDatas/Delete.cshtml
+++ b/WebApplication1/Views/AccountDatas/Delete.cshtml
@@ -1,7 +1,9 @@
 ﻿@model WebApplication1.Models.AccountData
 
 @{
-}
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    
+    }
 
 <!DOCTYPE html>
 
@@ -103,7 +105,7 @@
                 @Html.AntiForgeryToken()
 
                 <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    <input type="submit" value="Delete" class="btn btn-danger" /> |
                     @Html.ActionLink("Back to List", "Index")
                 </div>
             }
